Bug 1682230 - Don't call eglSetDamageRegion if buffer age is disabled. r=aosmond

If gfx.webrender.allow-partial-present-buffer-age is false then we do
not query the egl buffer age, and always render the entire
backbuffer. However, we were still calling eglSetDamageRegion if
KHR_partial_present is available. Calling eglSetDamageRegion without
first querying the buffer age is an error, which was causing an
assertion failure in debug builds. To fix this, check the value of the
pref before calling eglSetDamageRegion.

Differential Revision: https://phabricator.services.mozilla.com/D99659